--- a/InkTrack Report/Windows/Settings.xaml
+++ b/InkTrack Report/Windows/Settings.xaml
@@ -24,8 +24,7 @@
 		</Border.Effect>
 
 
-
-		<Grid>
+		<Grid ClipToBounds="True">
 			<Grid.RowDefinitions>
 				<RowDefinition Height="56"/>
 				<RowDefinition/>
@@ -49,7 +48,7 @@
 						<Image Source="/Resources/24/Help circle.png" Width="24" />
 					</Button.Content>
 				</Button>
-				<Button Grid.Column="4" Margin="0,8,8,8" Width="40" Height="40" Background="#FFED3B62" Click="CloseWindow_Click">
+				<Button Grid.Column="4" Margin="0,8,8,8" Width="40" Height="40" Click="CloseWindow_Click" Style="{StaticResource CancelButton}">
 					<Button.Content>
 						<Image Source="/Resources/24/x.png" Width="24" />
 					</Button.Content>
