--- a/InkTrack Report/Windows/ReplaceCartridge.xaml
+++ b/InkTrack Report/Windows/ReplaceCartridge.xaml
@@ -38,7 +38,7 @@
 			<Grid.RowDefinitions>
 				<RowDefinition Height="56"/>
 				<RowDefinition/>
-				<RowDefinition Height="92"/>
+				<RowDefinition Height="Auto"/>
 			</Grid.RowDefinitions>
 
 			<Grid Grid.Row="0">
@@ -53,12 +53,12 @@
 
 				<Rectangle Grid.ColumnSpan="2" Fill="Transparent" Panel.ZIndex="1" Name="PanelDrag" MouseDown="PanelDrag_MouseDown"/>
 				<TextBlock Text="Замена картриджа" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="16,0,16,0" FontFamily="{StaticResource Proletarsk}"/>
-				<Button Grid.Column="2" Margin="8,8,0,8" Width="40" Height="40" Background="#FF3B62ED">
+				<Button Grid.Column="2" Margin="8,8,0,8" Width="40" Height="40" Padding="0">
 					<Button.Content>
 						<Image Source="/Resources/24/Help circle.png" Width="24" />
 					</Button.Content>
 				</Button>
-				<Button Grid.Column="4" Margin="0,8,8,8" Width="40" Height="40" Background="#FFED3B62" Click="CloseWindow_Click">
+				<Button Grid.Column="4" Margin="0,8,8,8" Width="40" Height="40" Click="CloseWindow_Click" Padding="0" Style="{StaticResource CancelButton}">
 					<Button.Content>
 						<Image Source="/Resources/24/x.png" Width="24" />
 					</Button.Content>
