--- a/InkTrack Report/Windows/WindowTraySelectFuntion.xaml
+++ b/InkTrack Report/Windows/WindowTraySelectFuntion.xaml
@@ -22,12 +22,12 @@
 
 
 
-	<Border Background="White" CornerRadius="20" Margin="20,20,20,30" Padding="8">
+	<Border Background="White" CornerRadius="20" Margin="20,20,20,30" Padding="8" >
 		<Border.Effect>
 			<DropShadowEffect Direction="270" Opacity="0.25" Color="#000000" BlurRadius="20" ShadowDepth="10"/>
 		</Border.Effect>
-		<StackPanel ClipToBounds="True">
-			<Button Content="Генерация печатной формы заявки" Click="OpenReplaceCartridge"/>
+		<StackPanel >
+			<Button Content="Генерация печатной формы заявки" Click="GeneratePrintOutList"/>
 			<Rectangle Height="10"/>
 			<Button Content="Сервис" Click="OpenServiceButtons_Click" Name="Button_Service"/>
 			<StackPanel Name="ServiceButtons" Visibility="Collapsed">
