--- a/InkTrack Report/Windows/SettingsSetupWizard.xaml
+++ b/InkTrack Report/Windows/SettingsSetupWizard.xaml
@@ -51,7 +51,7 @@
 				<StackPanel Margin="32,18,32,32">
 					<TextBlock Grid.Row="0" Text="Укажите кабинет" FontSize="24" FontFamily="{StaticResource Proletarsk}"/>
 					<Rectangle Height="16"/>
-					<ComboBox  Grid.Row="1" Name="Combobox_SelectCabinet" SelectedValuePath="CabinetID" DisplayMemberPath="CabinetName" SelectedIndex="0" SelectionChanged="Combobox_SelectCabinet_SelectionChanged"/>
+					<ComboBox  Grid.Row="1" Name="Combobox_SelectCabinet" SelectedValuePath="CabinetID" DisplayMemberPath="CabinetName" SelectedIndex="0"/>
 				</StackPanel>
 				<StackPanel Margin="32,18,32,32">
 					<TextBlock Grid.Row="0" Text="Укажите сотрудника" FontSize="24" FontFamily="{StaticResource Proletarsk}"/>
@@ -61,7 +61,7 @@
 				<StackPanel Margin="32,18,32,32">
 					<TextBlock Grid.Row="0" Text="Укажите принтер" FontSize="24" FontFamily="{StaticResource Proletarsk}"/>
 					<Rectangle Height="16"/>
-					<ComboBox  Grid.Row="1" Name="Combobox_SelectPrinter" SelectedValuePath="PrinterID" DisplayMemberPath="PrinterName" SelectedIndex="0"/>
+					<ComboBox  Grid.Row="1" Name="Combobox_SelectPrinter" SelectedValuePath="DeviceID" DisplayMemberPath="DeviceName" SelectedIndex="0"/>
 				</StackPanel>
 			</StackPanel>
 
