--- a/InkTrack Report/App.xaml
+++ b/InkTrack Report/App.xaml
@@ -270,23 +270,54 @@
 			<Setter Property="BorderBrush" Value="#3b62ed"/>
 			<Setter Property="Background" Value="#ffffff"/>
 		</Style>
-		
+
 		<Style TargetType="TextBox">
-			<Setter Property="Height" Value="48"/>
 			<Setter Property="FontSize" Value="24"/>
 			<Setter Property="FontFamily" Value="{StaticResource Proletarsk}"/>
 			<Setter Property="Foreground" Value="#000000"/>
 			<Setter Property="BorderBrush" Value="#3b62ed"/>
 			<Setter Property="Background" Value="#ffffff"/>
+			<Setter Property="BorderThickness" Value="2"/>
+			<Setter Property="Padding" Value="12"/>
+			<Style.Resources>
+				<Style TargetType="Border">
+					<Setter Property="CornerRadius" Value="16"/>
+				</Style>
+			</Style.Resources>
 		</Style>
 
 		<Style TargetType="PasswordBox">
-			<Setter Property="Height" Value="48"/>
-			<Setter Property="FontSize" Value="24"/>
-			<Setter Property="FontFamily" Value="{StaticResource Proletarsk}"/>
-			<Setter Property="Foreground" Value="#000000"/>
-			<Setter Property="BorderBrush" Value="#3b62ed"/>
-			<Setter Property="Background" Value="#ffffff"/>
+			<Setter Property="PasswordChar" Value="●"/>
+			<Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.WindowBrushKey}}"/>
+			<Setter Property="BorderBrush" Value="{StaticResource DefaultColor}"/>
+			<Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"/>
+			<Setter Property="BorderThickness" Value="2"/>
+			<Setter Property="Padding" Value="16"/>
+			<Setter Property="FontSize" Value="18"/>
+			<Setter Property="KeyboardNavigation.TabNavigation" Value="None"/>
+			<Setter Property="HorizontalContentAlignment" Value="Left"/>
+			<Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+			<Setter Property="AllowDrop" Value="true"/>
+			<Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst"/>
+			<Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
+			<Setter Property="Template">
+				<Setter.Value>
+					<ControlTemplate TargetType="{x:Type PasswordBox}">
+						<Border x:Name="border" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" SnapsToDevicePixels="True" CornerRadius="16">
+							<ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden"/>
+						</Border>
+					</ControlTemplate>
+				</Setter.Value>
+			</Setter>
+			<Style.Triggers>
+				<MultiTrigger>
+					<MultiTrigger.Conditions>
+						<Condition Property="IsInactiveSelectionHighlightEnabled" Value="true"/>
+						<Condition Property="IsSelectionActive" Value="false"/>
+					</MultiTrigger.Conditions>
+					<Setter Property="SelectionBrush" Value="{DynamicResource {x:Static SystemColors.InactiveSelectionHighlightBrushKey}}"/>
+				</MultiTrigger>
+			</Style.Triggers>
 		</Style>
 	</Application.Resources>
 </Application>
