--- a/InkTrack Report/Windows/WindowTraySelectFuntion.xaml
+++ b/InkTrack Report/Windows/WindowTraySelectFuntion.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+		xmlns:txt="clr-namespace:System.Windows;assembly=PresentationFramework"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InkTrack_Report.Windows"
         mc:Ignorable="d"
@@ -27,11 +28,11 @@
 			<DropShadowEffect Direction="270" Opacity="0.25" Color="#000000" BlurRadius="20" ShadowDepth="10"/>
 		</Border.Effect>
 		<StackPanel >
-			<TextBlock Text="Страниц напечатано: 000" Margin="10,10,10,15" Name="TextBlock_CounterPages"/>
+			<TextBlock Text="Страниц напечатано: 000" Margin="10,10,10,15" Name="TextBlock_CounterPages" />
 			<Button Content="Сервис" Click="OpenServiceButtons_Click" Name="Button_Service" Width="365"/>
 			<StackPanel Name="ServiceButtons" Visibility="Collapsed">
 				<Rectangle Height="10"/>
-				<Button Content="Замена картриджа" Click="OpenReplaceCartridge">
+				<Button Content="Замена картриджа" Click="OpenReplaceCartridge" >
 				</Button>
 				<Rectangle Height="10"/>
 				<Button Content="Настройки" Click="OpenSettings_Click"/>
