--- a/InkTrack Report/Windows/Dialog/PageCountDialog.xaml
+++ b/InkTrack Report/Windows/Dialog/PageCountDialog.xaml
@@ -14,7 +14,7 @@
 		</Grid.RowDefinitions>
 
 		<TextBlock x:Name="txtMessage" Text="..." TextWrapping="Wrap" Grid.Row="0" Margin="0,0,0,10"/>
-		<TextBox x:Name="txtPageCount" Grid.Row="1" VerticalAlignment="Center" />
+		<TextBox x:Name="txtPageCount" Grid.Row="1" VerticalAlignment="Center" Text="1"/>
 
 		<StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
 			<Button Content="OK" Margin="0,0,10,0" Click="Ok_Click"/>
