--- a/InkTrack Report/Windows/ReplaceCartridge.xaml
+++ b/InkTrack Report/Windows/ReplaceCartridge.xaml
@@ -10,14 +10,8 @@
         Background="Transparent"
 		WindowStartupLocation="CenterScreen" 
 		SizeToContent="WidthAndHeight"
-		ResizeMode="NoResize"
+		ResizeMode="NoResize" Loaded="Window_Loaded"
 		>
-
-	<Window.Resources>
-		<FontFamily x:Key="Proletarsk">
-			pack://application:,,,/Fonts/Proletarsk.ttf#Proletarsk
-		</FontFamily>
-	</Window.Resources>
 
 	<Border Background="White" CornerRadius="16" Width="663" Height="796" Margin="20,20,20,30" RenderTransformOrigin="0.5,0.5">
 		<Border.RenderTransform>
@@ -55,12 +49,12 @@
 				<TextBlock Text="Замена картриджа" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="16,0,16,0" FontFamily="{StaticResource Proletarsk}"/>
 				<Button Grid.Column="2" Margin="8,8,0,8" Width="40" Height="40" Padding="0">
 					<Button.Content>
-						<Image Source="/Resources/24/Help circle.png" Width="24" />
+						<Image Source="/Resources/Help circle.png" Width="24" />
 					</Button.Content>
 				</Button>
 				<Button Grid.Column="4" Margin="0,8,8,8" Width="40" Height="40" Click="CloseWindow_Click" Padding="0" Style="{StaticResource CancelButton}">
 					<Button.Content>
-						<Image Source="/Resources/24/x.png" Width="24" />
+						<Image Source="/Resources/X.png" Width="24" />
 					</Button.Content>
 				</Button>
 
@@ -90,25 +84,25 @@
 				</Grid.RowDefinitions>
 
 				<TextBlock Grid.Row="0" Text="Причина замены" FontFamily="{StaticResource Proletarsk}" FontSize="24"/>
-				<ListBox Grid.Row="2" Name="Listbox_CauseReplaceCartridge" BorderBrush="#FF3B62ED" DisplayMemberPath="Name" FontFamily="{StaticResource Proletarsk}" FontSize="24" SelectedValuePath="ReasonID"/>
+				<ListBox Grid.Row="2" Name="Listbox_CauseReplaceCartridge" DisplayMemberPath="Name" SelectedValuePath="ReasonID"/>
 				<TextBlock Grid.Row="4" Text="Картридж на замену" FontFamily="{StaticResource Proletarsk}" FontSize="24"/>
 				<ComboBox Grid.Row="6" Name="Combobox_CartridgeOnReplace" BorderBrush="#FF3B62ED" DisplayMemberPath="CartridgeNumber" FontFamily="{StaticResource Proletarsk}" FontSize="24" Height="48" SelectedValuePath="CartridgeID"/>
 				<TextBlock Grid.Row="8" Text="Кто заменил" FontFamily="{StaticResource Proletarsk}" FontSize="24"/>
 				<ComboBox Grid.Row="10" Name="Combobox_WhoReplaced" BorderBrush="#FF3B62ED" DisplayMemberPath="Employee.FIO" FontFamily="{StaticResource Proletarsk}" FontSize="24" Height="48" SelectedValuePath="EmployeeID"/>
 				<TextBlock Grid.Row="12" Text="Комментарий" FontFamily="{StaticResource Proletarsk}" FontSize="24"/>
-				<TextBox Grid.Row="14" Height="auto" Name="Textbox_Description"  Text="asda" FontFamily="{StaticResource Proletarsk}" AcceptsReturn="True" TextWrapping="WrapWithOverflow"/>
+				<TextBox Grid.Row="14" Height="auto" Name="Textbox_Description" FontFamily="{StaticResource Proletarsk}" AcceptsReturn="True" TextWrapping="WrapWithOverflow"/>
 
 			</Grid>
 
-			<Grid Grid.Row="2" HorizontalAlignment="Center">
+			<Grid Grid.Row="2" HorizontalAlignment="Center" Margin="8">
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition/>
 					<ColumnDefinition Width="16"/>
 					<ColumnDefinition/>
 				</Grid.ColumnDefinitions>
 
-				<Button Grid.Column="0" Content="Сохранить" FontFamily="{StaticResource Proletarsk}" Width="207" Style="{StaticResource AcceptButton}" Click="Save_Click"/>
-				<Button Grid.Column="2" Content="Отмена" FontFamily="{StaticResource Proletarsk}" Width="207" Style="{StaticResource CancelButton}" Click="Cancel_Click"/>
+				<Button Grid.Column="0" Content="Сохранить" Width="207" Style="{StaticResource AcceptButton}" Click="Save_Click"/>
+				<Button Grid.Column="2" Content="Отмена" Width="207" Style="{StaticResource CancelButton}" Click="Cancel_Click"/>
 
 			</Grid>
 
