--- a/InkTrack Report/Windows/Settings.xaml
+++ b/InkTrack Report/Windows/Settings.xaml
@@ -18,7 +18,7 @@
 		</FontFamily>
 	</Window.Resources>
 
-	<Border Background="White" CornerRadius="16" Width="462" Height="554" Margin="20,20,20,30">
+	<Border Background="White" CornerRadius="16" Width="auto" Height="554" Margin="20,20,20,30">
 		<Border.Effect>
 			<DropShadowEffect Direction="270" Opacity="0.25" Color="#000000" BlurRadius="20" ShadowDepth="10"/>
 		</Border.Effect>
@@ -45,30 +45,30 @@
 				<TextBlock Text="Настройки" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="16,0,16,0" FontFamily="{StaticResource Proletarsk}"/>
 				<Button Grid.Column="2" Margin="8,8,0,8" Width="40" Height="40" Padding="0">
 					<Button.Content>
-						<Image Source="/Resources/24/Help circle.png" Width="24"/>
+						<Image Source="/Resources/Help circle.png" Width="24"/>
 					</Button.Content>
 				</Button>
 				<Button Grid.Column="4" Margin="0,8,8,8" Width="40" Height="40" Padding="0" Click="CloseWindow_Click" Style="{StaticResource CancelButton}">
 					<Button.Content>
-						<Image Source="/Resources/24/x.png" Width="24" />
+						<Image Source="/Resources/X.png"  Width="24" />
 					</Button.Content>
 				</Button>
 			</Grid>
 
-			<StackPanel Grid.Row="1" Margin="16">
+			<StackPanel Grid.Row="1" Margin="0,16,0,16">
 
 				<StackPanel Width="392">
 					<TextBlock FontSize="24" FontFamily="{StaticResource Proletarsk}" Text="Кабинет"/>
 					<Rectangle Height="16"/>
 					<ComboBox FontSize="24" FontFamily="{StaticResource Proletarsk}" Height="48" Name="Combobox_SelectCabinet" DisplayMemberPath="CabinetName" SelectedValuePath="CabinetID" SelectionChanged="ComboboxCabinetSelect_SelectionChanged"/>
 				</StackPanel>
-				<Rectangle Height="32"/>
+				<Rectangle Height="32" Width="355"/>
 				<StackPanel Width="392">
 					<TextBlock FontSize="24" FontFamily="{StaticResource Proletarsk}" Text="Сотрудник" />
 					<Rectangle Height="16"/>
 					<ComboBox FontSize="24" FontFamily="{StaticResource Proletarsk}" Height="48" Name="Combobox_SelectEmployee" DisplayMemberPath="FIO" SelectedValuePath="EmployeeID"/>
 				</StackPanel>
-				<Rectangle Height="32"/>
+				<Rectangle Height="32" Width="340"/>
 				<StackPanel Width="392">
 					<TextBlock FontSize="24" FontFamily="{StaticResource Proletarsk}" Text="Принтер"/>
 					<Rectangle Height="16"/>
@@ -77,7 +77,7 @@
 
 			</StackPanel>
 
-			<Grid Grid.Row="2" HorizontalAlignment="Center">
+			<Grid Grid.Row="2" HorizontalAlignment="Center" Margin="8">
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition/>
 					<ColumnDefinition Width="16"/>
@@ -86,9 +86,7 @@
 
 				<Button Grid.Column="0" Content="Сохранить" Click="Save_Click" Style="{StaticResource AcceptButton}"/>
 				<Button Grid.Column="2" Content="Отмена" Width="207" Click="Cancel_Click" Style="{StaticResource CancelButton}"/>
-
 			</Grid>
-
 		</Grid>
 
 	</Border>
