--- a/InkTrack Report/Windows/SettingsSetupWizard.xaml
+++ b/InkTrack Report/Windows/SettingsSetupWizard.xaml
@@ -11,12 +11,7 @@
 		Background="Transparent"
 		WindowStartupLocation="CenterScreen" 
 		SizeToContent="WidthAndHeight"
-		ResizeMode="NoResize">
-	<Window.Resources>
-		<FontFamily x:Key="Proletarsk">
-			pack://application:,,,/Fonts/Proletarsk.ttf#Proletarsk
-		</FontFamily>
-	</Window.Resources>
+		ResizeMode="NoResize" Loaded="Window_Loaded">
 
 	<Border Background="White" CornerRadius="16" Width="640" Height="auto" Margin="20,20,20,30">
 		<Border.Effect>
@@ -26,7 +21,7 @@
 			<Grid.RowDefinitions>
 				<RowDefinition Height="56"/>
 				<RowDefinition/>
-				<RowDefinition Height="76"/>
+				<RowDefinition Height="auto"/>
 			</Grid.RowDefinitions>
 
 			<Grid Grid.Row="0">
@@ -43,7 +38,7 @@
 				<TextBlock Text="Мастер настройки InkTrack Report" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="16,0,16,0" FontFamily="{StaticResource Proletarsk}"/>
 				<Button Grid.Column="4" Margin="0,8,8,8" Width="40" Height="40" Padding="0" Style="{StaticResource CancelButton}" Click="CloseWindow_Click">
 					<Button.Content>
-						<Image Source="/Resources/24/x.png" Width="24" />
+						<Image Source="/Resources/X.png" Width="24" />
 					</Button.Content>
 				</Button>
 			</Grid>
