--- a/InkTrack Report/Windows/ReplaceCartridge.xaml
+++ b/InkTrack Report/Windows/ReplaceCartridge.xaml
@@ -13,7 +13,7 @@
 		ResizeMode="NoResize" Loaded="Window_Loaded"
 		>
 
-	<Border Background="White" CornerRadius="16" Width="663" Height="920" Margin="20,20,20,30" RenderTransformOrigin="0.5,0.5">
+	<Border Background="White" CornerRadius="16" Width="663" Height="670" Margin="20,20,20,30" RenderTransformOrigin="0.5,0.5">
 		<Border.RenderTransform>
 			<TransformGroup>
 				<ScaleTransform ScaleX="1"/>
@@ -25,9 +25,6 @@
 		<Border.Effect>
 			<DropShadowEffect Direction="270" Opacity="0.25" Color="#000000" BlurRadius="20" ShadowDepth="10"/>
 		</Border.Effect>
-
-
-
 		<Grid>
 			<Grid.RowDefinitions>
 				<RowDefinition Height="56"/>
@@ -72,7 +69,7 @@
 				<StackPanel Margin="10">
 					<TextBlock Text="Причина замены"/>
 					<Rectangle Height="16"/>
-					<ListBox Grid.Row="2" Name="Listbox_CauseReplaceCartridge" DisplayMemberPath="Name" SelectedValuePath="Id" Height="68" />
+					<ComboBox Grid.Row="2" Name="Listbox_CauseReplaceCartridge" DisplayMemberPath="Name" SelectedValuePath="Id" />
 				</StackPanel>
 				<Rectangle Height="16"/>
 				<StackPanel Margin="10">
@@ -85,12 +82,6 @@
 					<TextBlock Text="Кто заменил"/>
 					<Rectangle Height="16"/>
 					<ComboBox Name="Combobox_WhoReplaced" DisplayMemberPath="FullName" SelectedValuePath="Id"/>
-				</StackPanel>
-				<Rectangle Height="16"/>
-				<StackPanel Margin="10">
-					<TextBlock Text="Комментарий"/>
-					<Rectangle Height="16"/>
-					<TextBox Grid.Row="14" Height="150" Name="Textbox_Description" FontFamily="{StaticResource Proletarsk}" AcceptsReturn="True" TextWrapping="WrapWithOverflow"/>
 				</StackPanel>
 			</StackPanel>
 
