--- a/InkTrack Report/Windows/Dialog/PageCountDialog.xaml
+++ b/InkTrack Report/Windows/Dialog/PageCountDialog.xaml
@@ -5,20 +5,70 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InkTrack_Report.Windows.Dialog"
         mc:Ignorable="d"
-        Title="PageCountDialog" Height="450" Width="800">
-	<Grid Margin="10">
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="Auto"/>
-		</Grid.RowDefinitions>
+        		WindowStyle="None"
+        Title="Окно подтверждения сотрудника"
+		AllowsTransparency="True"
+		Background="Transparent"
+		WindowStartupLocation="CenterScreen" 
+		SizeToContent="WidthAndHeight"
+		ResizeMode="NoResize" Loaded="Window_Loaded">
+	<Border Background="White" CornerRadius="16" Width="634" Margin="20,20,20,30" RenderTransformOrigin="0.5,0.5">
+		<Border.RenderTransform>
+			<TransformGroup>
+				<ScaleTransform ScaleX="1"/>
+				<SkewTransform/>
+				<RotateTransform/>
+				<TranslateTransform/>
+			</TransformGroup>
+		</Border.RenderTransform>
+		<Border.Effect>
+			<DropShadowEffect Direction="270" Opacity="0.25" Color="#000000" BlurRadius="20" ShadowDepth="10"/>
+		</Border.Effect>
+		<Grid ClipToBounds="True">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="56"/>
+				<RowDefinition/>
+				<RowDefinition Height="Auto"/>
+			</Grid.RowDefinitions>
 
-		<TextBlock x:Name="txtMessage" Text="..." TextWrapping="Wrap" Grid.Row="0" Margin="0,0,0,10"/>
-		<TextBox x:Name="txtPageCount" Grid.Row="1" VerticalAlignment="Center" Text="1"/>
+			<Grid Grid.Row="0">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="*"/>
+				</Grid.ColumnDefinitions>
 
-		<StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-			<Button Content="OK" Margin="0,0,10,0" Click="Ok_Click"/>
-			<Button Content="Отмена" Click="Cancel_Click"/>
-		</StackPanel>
-	</Grid>
+
+				<Rectangle Grid.ColumnSpan="2" Fill="Transparent" Panel.ZIndex="1" Name="PanelDrag" MouseDown="PanelDrag_MouseDown"/>
+				<TextBlock Text="Окно уточнения количества страниц" FontSize="24" VerticalAlignment="Center" Margin="16,0,16,0" FontFamily="{StaticResource Proletarsk}"/>
+			</Grid>
+
+			<StackPanel Grid.Row="1" Margin="16">
+
+				<StackPanel Margin="10">
+					<TextBlock Name="txtMessage" Text="..." TextWrapping="Wrap" />
+					<Rectangle Height="16"/>
+					<Grid>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition/>
+							<ColumnDefinition Width="10"/>
+							<ColumnDefinition Width="auto"/>
+						</Grid.ColumnDefinitions>
+						<TextBox Grid.Column="0" Name="TextBox_PageCount" HorizontalAlignment="Center" Width="100" TextAlignment="Center"/>
+					</Grid>
+				</StackPanel>
+			</StackPanel>
+
+			<Grid Grid.Row="2" HorizontalAlignment="Center" Margin="8">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition/>
+					<ColumnDefinition Width="16"/>
+					<ColumnDefinition/>
+				</Grid.ColumnDefinitions>
+
+				<Button Grid.Column="0" Content="Подтвердить" Click="Ok_Click"/>
+
+			</Grid>
+
+		</Grid>
+
+	</Border>
 </Window>
