--- a/InkTrack Report/Windows/ReplaceCartridge.xaml
+++ b/InkTrack Report/Windows/ReplaceCartridge.xaml
@@ -25,7 +25,7 @@
 		<Border.Effect>
 			<DropShadowEffect Direction="270" Opacity="0.25" Color="#000000" BlurRadius="20" ShadowDepth="10"/>
 		</Border.Effect>
-		<Grid>
+		<Grid ClipToBounds="True">
 			<Grid.RowDefinitions>
 				<RowDefinition Height="56"/>
 				<RowDefinition/>
