--- a/InkTrack Report/Windows/ReplaceCartridge.xaml
+++ b/InkTrack Report/Windows/ReplaceCartridge.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:shell="clr-namespace:System.Windows.Shell;assembly=PresentationFramework"
         xmlns:av="http://schemas.microsoft.com/expression/blend/2008"
-		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="av" x:Class="InkTrack_Report.Windows.ReplaceCartridge"
+		xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="av" x:Class="InkTrack.Windows.ReplaceCartridge"
         Title="Замена картриджа"
         WindowStyle="None"
         AllowsTransparency="True"
