--- a/InkTrack Report/Windows/WindowTraySelectFuntion.xaml
+++ b/InkTrack Report/Windows/WindowTraySelectFuntion.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="InkTrack_Report.Windows.WindowTraySelectFuntion"
+﻿<Window x:Class="InkTrack.Windows.WindowTraySelectFuntion"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
 		xmlns:txt="clr-namespace:System.Windows;assembly=PresentationFramework"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:InkTrack_Report.Windows"
+        xmlns:local="clr-namespace:InkTrack.Windows"
         mc:Ignorable="d"
 		WindowStyle="None" 
 		Background="{x:Null}"
