--- a/InkTrack Report/Windows/ReplaceCartridge.xaml
+++ b/InkTrack Report/Windows/ReplaceCartridge.xaml
@@ -8,12 +8,12 @@
         WindowStyle="None"
         AllowsTransparency="True"
         Background="Transparent"
-		WindowStartupLocation="CenterScreen" 
+		WindowStartupLocation="Manual" 
 		SizeToContent="WidthAndHeight"
-		ResizeMode="NoResize" Loaded="Window_Loaded"
+		ResizeMode="NoResize" Loaded="Window_Loaded" Topmost="True"
 		>
 
-	<Border Background="White" CornerRadius="16" Width="663" Height="670" Margin="20,20,20,30" RenderTransformOrigin="0.5,0.5">
+	<Border Background="White" CornerRadius="16" Width="480" Margin="20,20,20,30" Name="Border_Window">
 		<Border.RenderTransform>
 			<TransformGroup>
 				<ScaleTransform ScaleX="1"/>
@@ -32,6 +32,20 @@
 				<RowDefinition Height="Auto"/>
 			</Grid.RowDefinitions>
 
+			<Border Background="#008300" Panel.ZIndex="100" Grid.RowSpan="3" CornerRadius="16" Opacity="0" Visibility="Hidden" Name="Border_SuccsesReplace">
+				<Grid Margin="16">
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition/>
+						<ColumnDefinition Width="16"/>
+						<ColumnDefinition Width="auto"/>
+					</Grid.ColumnDefinitions>
+
+					<TextBlock Text="Картридж заменен" Foreground="White" HorizontalAlignment="Right" Grid.Column="0"/>
+					<Image Source="/Resources/Check circle.png" Width="32"  Grid.Column="2"/>
+				</Grid>
+			</Border>
+
+
 			<Grid Grid.Row="0">
 				<Grid.ColumnDefinitions>
 					<ColumnDefinition Width="auto"/>
@@ -41,67 +55,22 @@
 					<ColumnDefinition Width="auto"/>
 				</Grid.ColumnDefinitions>
 
-
 				<Rectangle Grid.ColumnSpan="2" Fill="Transparent" Panel.ZIndex="1" Name="PanelDrag" MouseDown="PanelDrag_MouseDown"/>
 				<TextBlock Text="Замена картриджа" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="16,0,16,0" FontFamily="{StaticResource Proletarsk}"/>
-				<Button Grid.Column="2" Margin="8,8,0,8" Width="40" Height="40" Padding="0">
+				<Button Grid.Column="2" Margin="8,8,0,8" Width="40" Height="40" Padding="0" Panel.ZIndex="50">
 					<Button.Content>
 						<Image Source="/Resources/Help circle.png" Width="24" />
 					</Button.Content>
 				</Button>
-				<Button Grid.Column="4" Margin="0,8,8,8" Width="40" Height="40" Click="CloseWindow_Click" Padding="0" Style="{StaticResource CancelButton}">
+				<Button Grid.Column="4" Margin="0,8,8,8" Width="40" Height="40" Click="CloseWindow_Click" Panel.ZIndex="50" Padding="0" Style="{StaticResource CancelButton}">
 					<Button.Content>
 						<Image Source="/Resources/X.png" Width="24" />
 					</Button.Content>
 				</Button>
-
-
 			</Grid>
 
-			<StackPanel Grid.Row="1" Width="631" Margin="16">
-
-				<StackPanel Margin="10">
-					<TextBlock Text="Принтер у которого заменяется картридж"/>
-					<Rectangle Height="16"/>
-					<ComboBox Name="Combobox_SelectPrinter" SelectionChanged="Combobox_SelectPrinter_SelectionChanged" DisplayMemberPath="DeviceName"/>
-				</StackPanel>
-				<Rectangle Height="16"/>
-				<StackPanel Margin="10">
-					<TextBlock Text="Причина замены"/>
-					<Rectangle Height="16"/>
-					<ComboBox Grid.Row="2" Name="Listbox_CauseReplaceCartridge" DisplayMemberPath="Name" SelectedValuePath="Id" />
-				</StackPanel>
-				<Rectangle Height="16"/>
-				<StackPanel Margin="10">
-					<TextBlock Text="Картридж на замену"/>
-					<Rectangle Height="16"/>
-					<ComboBox Name="Combobox_CartridgeOnReplace" DisplayMemberPath="Number" SelectedValuePath="Id"/>
-				</StackPanel>
-				<Rectangle Height="16"/>
-				<StackPanel Margin="10">
-					<TextBlock Text="Кто заменил"/>
-					<Rectangle Height="16"/>
-					<ComboBox Name="Combobox_WhoReplaced" DisplayMemberPath="FullName" SelectedValuePath="Id"/>
-				</StackPanel>
-			</StackPanel>
-
-			<Grid Grid.Row="2" HorizontalAlignment="Center" Margin="8">
-				<Grid.ColumnDefinitions>
-					<ColumnDefinition/>
-					<ColumnDefinition Width="16"/>
-					<ColumnDefinition/>
-				</Grid.ColumnDefinitions>
-
-				<Button Grid.Column="0" Content="Сохранить" Width="207" Style="{StaticResource AcceptButton}" Click="Save_Click"/>
-				<Button Grid.Column="2" Content="Отмена" Width="207" Style="{StaticResource CancelButton}" Click="Cancel_Click"/>
-
-			</Grid>
-
+			<Frame Grid.Row="1" Name="Frame_PagesReplaceCartridge" NavigationUIVisibility="Hidden"/>
 		</Grid>
-
-
-
-
 	</Border>
 
 </Window>
